syntax = "proto3";

package saga.abcdef;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "saga/abcdef/params.proto";

option go_package = "github.com/sagaxyz/saga-sdk/x/abcdef/types";

// GenesisState defines the abcdef module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
  Params params  = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  string port_id = 2;
}

